<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
        <TextView
                android:id="@+id/tod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">
        <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/tempStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textTemp"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/temp"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">
        <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/feelStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textFeel"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/feel"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">
        <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/cloudStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textСloud"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cloud"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">
        <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/humidityStr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textHumidity"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/humidity"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">
        <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/pressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textPressure"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pressure"
                android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">
        <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textWind"
                android:layout_weight="1"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wind"
                android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>
